# asmotor

./: .clang-format  .clangd  .gitattributes  .gitignore  .gitmodules  .justfile  CHANGELOG.md  CMakeLists.txt  README.md  amitime.c  amitime.h  asmotor.sln  azure-pipelines.yml  b-amiga.sh  b.ps1  b.sh  bootstrap.sh  init-amiga.sh  init.ps1  init.sh  install.ps1  install.sh  release.sh  strings.c  test.sh  types.h
xasm/: 6502.vcxproj  6502.vcxproj.filters  680x0.vcxproj  680x0.vcxproj.filters  CMakeLists.txt  SConstruct  asmotor.vcxproj  asmotor.vcxproj.filters  gameboy.vcxproj  gameboy.vcxproj.filters  mips.vcxproj  mips.vcxproj.filters
xasm/0x10c/: 0x10c_errors.c  0x10c_errors.h  0x10c_main.c  0x10c_options.c  0x10c_options.h  0x10c_parse.c  0x10c_parse.h  0x10c_symbols.c  0x10c_symbols.h  0x10c_tokens.c  0x10c_tokens.h  CMakeLists.txt  localasm.h  loccpu.h  locerror.c  loclexer.c  loclexer.h  locopt.c  locopt.h  locparse.c  locsym.c  main.c
xasm/6502/: CMakeLists.txt  intinstr.h  localasm.h  loccpu.h  locerror.c  locerror.h  loclexer.c  loclexer.h  locopt.c  locopt.h  locparse.c  locsym.c  main.c  x65_errors.c  x65_errors.h  x65_main.c  x65_options.c  x65_options.h  x65_parse.c  x65_parse.h  x65_parse_addrmode.c  x65_parse_instr.c  x65_parse_instr_4510.c  x65_parse_instr_65816.c  x65_section.c  x65_section.h  x65_symbols.c  x65_symbols.h  x65_tokens.c  x65_tokens.h
xasm/6502/test/: undoc0.6502
xasm/6809/: CMakeLists.txt  m6809_errors.c  m6809_errors.h  m6809_main.c  m6809_options.c  m6809_options.h  m6809_parse.c  m6809_parse.h  m6809_parse_addrmode.c  m6809_parse_directive.c  m6809_parse_instr.c  m6809_section.c  m6809_section.h  m6809_symbols.c  m6809_symbols.h  m6809_tokens.c  m6809_tokens.h
xasm/680x0/: CMakeLists.txt  Makefile  addrmode.h  amiga_build_all.sh  fpuinstr.h  intinstr.h  localasm.h  loccpu.h  locerror.c  locerror.h  loclexer.c  locopt.c  locopt.h  locparse.c  locsym.c  m68k_errors.c  m68k_errors.h  m68k_main.c  m68k_options.c  m68k_options.h  m68k_parse.c  m68k_parse.h  m68k_parse_addrmode.c  m68k_parse_directive.c  m68k_parse_fpu.c  m68k_parse_integer.c  m68k_section.c  m68k_section.h  m68k_symbols.c  m68k_symbols.h  m68k_tokens.c  m68k_tokens.h  main.c  pseudoop.h
xasm/680x0/test/: amigaexe.68k  rept.68k  (+1 more)
xasm/common/: CMakeLists.txt  amigaobj.c  amigaobj.h  amigaobject.c  amigaobject.h  binaryobject.c  binaryobject.h  binobj.c  binobj.h  charstack.c  charstack.h  dependency.c  dependency.h  elf.c  elf.h  errors.c  errors.h  expr.c  expr.h  expression.c  expression.h  failwarn.asm  filebuffer.c  filebuffer.h  filestack.c  filestack.h  fixedpoint.asm  fstack.c  fstack.h  globlex.c  globlex.h  includes.c  includes.h  lexer.c  lexer.h  lexer_buffer.c  lexer_buffer.h  lexer_constants.c  lexer_constants.h  lexer_context.c  (+40 more)
xasm/dcpu-16/: CMakeLists.txt  dcpu16_errors.c  dcpu16_errors.h  dcpu16_main.c  dcpu16_options.c  dcpu16_options.h  dcpu16_parse.c  dcpu16_parse.h  dcpu16_section.c  dcpu16_section.h  dcpu16_symbols.c  dcpu16_symbols.h  dcpu16_tokens.c  dcpu16_tokens.h
xasm/gameboy/: CMakeLists.txt  SConscript  localasm.h  locerror.c  loclexer.c  locopt.c  locopt.h  locparse.c  locsym.c  main.c  z80errors.c  z80errors.h  z80main.c  z80options.c  z80options.h  z80tokens.c  z80tokens.h
xasm/mips/: CMakeLists.txt  SConscript  intinstr.h  localasm.h  loccpu.h  loclexer.c  locopt.c  locopt.h  locparse.c  locsym.c  main.c  mips_errors.c  mips_errors.h  mips_main.c  mips_options.c  mips_options.h  mips_parse.c  mips_parse.h  mips_parse_instr.c  mips_section.c  mips_section.h  mips_symbols.c  mips_symbols.h  mips_tokens.c  mips_tokens.h
xasm/motor/: CMakeLists.txt  amigaobject.c  amigaobject.h  binaryobject.c  binaryobject.h  charstack.c  charstack.h  dependency.c  dependency.h  elf.c  elf.h  errors.c  errors.h  expression.c  expression.h  includes.c  includes.h  lexer.c  lexer.h  lexer_buffer.c  lexer_buffer.h  lexer_constants.c  lexer_constants.h  lexer_context.c  lexer_context.h  linemap.c  linemap.h  object.c  object.h  options.c  options.h  parse.c  parse.h  parse_block.c  parse_block.h  parse_directive.c  parse_directive.h  parse_expression.c  parse_expression.h  parse_float_expression.c  (+15 more)
xasm/qasm/: CMakeLists.txt  assemble.c  assemble.h  binaryobject.c  binaryobject.h  errors.c  errors.h  expression.c  expression.h  lexbuffer.c  lexbuffer.h  lexer.c  lexer.h  lexer_constants.h  options.c  options.h  parse.c  parse.h  parse_expression.c  parse_expression.h  patch.h  qasm.c  qasm.h  section.c  section.h  symbol.c  symbol.h  tokens.c  tokens.h  xasm.h
xasm/rc8/: CMakeLists.txt  rc8_errors.c  rc8_errors.h  rc8_main.c  rc8_options.c  rc8_options.h  rc8_parse.c  rc8_parse.h  rc8_parse_instr.c  rc8_section.c  rc8_section.h  rc8_symbols.c  rc8_symbols.h  rc8_tokens.c  rc8_tokens.h
xasm/riscv/: CMakeLists.txt  v_errors.c  v_errors.h  v_main.c  v_options.c  v_options.h  v_parse.c  v_parse.h  v_parse_instr.c  v_section.c  v_section.h  v_symbols.c  v_symbols.h  v_tokens.c  v_tokens.h
xasm/schip/: CMakeLists.txt  intinstr.h  localasm.h  loccpu.h  locerror.c  loclexer.c  locopt.c  locopt.h  locparse.c  main.c  schip_error.c  schip_error.h  schip_main.c  schip_options.c  schip_options.h  schip_parse.c  schip_parse.h  schip_parse_instr.c  schip_section.c  schip_section.h  schip_symbols.c  schip_symbols.h  schip_tokens.c  schip_tokens.h
xasm/token_generator/: CMakeLists.txt  main.c
xasm/z80/: CMakeLists.txt  z80_errors.c  z80_errors.h  z80_main.c  z80_options.c  z80_options.h  z80_parse.c  z80_parse.h  z80_section.c  z80_section.h  z80_symbols.c  z80_symbols.h  z80_tokens.c  z80_tokens.h  z80main.c  z80options.c  z80parse.c
xlink/: CMakeLists.txt  SConstruct  amiga.c  amiga.h  assign.c  assign.h  coco.c  coco.h  commodore.c  commodore.h  elf.c  elf.h  error.c  error.h  foenix.c  foenix.h  gameboy.c  gameboy.h  group.c  group.h  hc800.c  hc800.h  image.c  image.h  listfile.c  listfile.h  machinedefinition.c  machinedefinition.h  main.c  mapfile.c  mapfile.h  memorymap.c  memorymap.h  object.c  object.h  output.c  output.h  patch.c  patch.h  reloc.c  (+10 more)
(+312 files in other folders)
