if(MSVC)
  add_compile_options(/W4 /WX)
else(MSVC)
  add_compile_options(-Wall -Wextra -pedantic -Werror)
endif(MSVC)

include_directories ("${PROJECT_SOURCE_DIR}/xasm/common")

add_subdirectory (common)
add_subdirectory (0x10c)
add_subdirectory (6502)
add_subdirectory (680x0)
add_subdirectory (z80)
add_subdirectory (mips)
add_subdirectory (schip)
