add_library (xasm 
    amigaobject.c
    amigaobject.h
    binaryobject.c
    binaryobject.h
	charstack.c
	charstack.h
    dependency.c
    dependency.h
    elf.c
    elf.h
    errors.c
    errors.h
    expression.c
    expression.h
    includes.c
    includes.h
    lexer.c
    lexer.h
    lexer_buffer.c
    lexer_buffer.h
    lexer_context.c
    lexer_context.h
    lexer_constants.c
    lexer_constants.h
    linemap.c
    linemap.h
    object.c
    object.h
    options.c
    options.h
    parse.c
    parse.h
    parse_block.c
    parse_block.h
    parse_directive.c
    parse_directive.h
    parse_expression.c
    parse_expression.h
    parse_float_expression.c
    parse_float_expression.h
    parse_string.c
    parse_string.h
    parse_symbol.c
    parse_symbol.h
    patch.c
    patch.h
    section.c
    section.h
    symbol.c
    symbol.h
    tokens.c
    tokens.h
    xasm.c
    xasm.h)
